# InferX

./: LICENSE  README.md
phase 01/: README.md  client.py
phase 02/: README.md  inferx_benchmark_framework.py  prompts.txt
phase 02/trials/run1/: gpu_memory.csv  metrics.csv
phase 02/trials/run2/: gpu_memory (1).csv  metrics (1).csv
phase 02/trials/run3/: gpu_memory (1).csv  metrics (1).csv
phase01/: README.md  benchmark_results.csv  client.py  main.py  pyproject.toml  start_server.sh
phase02/: README.md  client.py  generator.py  pyproject.toml
phase02/benchmark/: benchmark_results.csv
phase03/: README.md  async_naive_scheduler.py  benchmark_results.csv  naive_scheduler.py  plot.py  pyproject.toml  run.py
