[project]
name = "phase01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "matplotlib>=3.10.6",
    "nvidia-ml-py3>=7.352.0",
    "openai>=1.109.0",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers>=4.56.2",
    "vllm>=0.10.2",
]
